Edit user- show widget

--- a/src/pages/User/user.css
+++ b/src/pages/User/user.css
@@ -19,3 +19,77 @@
   color: white;
   font-size: 16px;
 }
+
+.userContainer {
+  display: flex;
+  margin-top: 20px;
+}
+
+.userDisplay {
+  flex: 1;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  padding: 20px;
+}
+
+.userUpdate {
+  flex: 2;
+  margin-left: 20px;
+  padding: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  padding: 20px;
+}
+
+.userShowTop {
+  display: flex;
+  align-items: center;
+}
+
+.userShowImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.userShowTopTitle {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.userShowName {
+  font-weight: 600;
+}
+
+.userShowJobTitle {
+  font-weight: 300;
+  color: gray;
+}
+
+.userShowBottom {
+  margin-top: 20px;
+}
+
+.userShowTitle {
+  font-size: 14px;
+  font-weight: 600;
+  color: lightgray;
+}
+
+.userShowInfo {
+  display: flex;
+  align-items: center;
+  margin: 20px 0px;
+  color: #444;
+}
+
+.userShowIcon {
+  font-size: 15px !important;
+}
+
+.userShowInfoTitle {
+  margin-left: 20px;
+}
