--- a/src/pages/User/user.css
+++ b/src/pages/User/user.css
@@ -93,3 +93,17 @@
 .userShowInfoTitle {
   margin-left: 20px;
 }
+
+.userUpdateImg {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.userUpdateForm {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
