add admin link and settings link

--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -31,10 +31,7 @@
   color: #555;
   margin-left: 8px;
   cursor: pointer;
-}
-
-.topbarIconContainer:hover {
-  color: rgb(180, 177, 177);
+  text-decoration: none;
 }
 
 .topIconBadge {
@@ -59,4 +56,14 @@
   border-radius: 50%;
   cursor: pointer;
   margin-left: 8px;
+}
+
+.link {
+  text-decoration: none;
+  background-color: white;
+  color: none;
+}
+
+.link:hover {
+  background-color: white;
 }
