add new product form

--- a/src/pages/newProduct/newProduct.css
+++ b/src/pages/newProduct/newProduct.css
@@ -1,3 +1,70 @@
 .newProduct {
   flex: 4;
 }
+
+.addProductForm {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.newProductItem {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.newProductItem > label {
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(185, 185, 185);
+}
+
+.newProductItem > input {
+  height: 20px;
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.newProductSelect {
+  height: 40px;
+  border-radius: 5px;
+}
+.newProductButton {
+  width: 150px;
+  height: 30px;
+  border: none;
+  background-color: darkblue;
+  color: white;
+  padding: 7px 10px;
+  font-weight: 600;
+  border-radius: 10px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
+.newProductItemImg {
+  border: none;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.newProductItemImg > label {
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(185, 185, 185);
+}
+
+.newProductItemImg > input {
+  height: 20px;
+  padding: 10px;
+  border: none;
+}
